# c2pa-cbor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  release-plz.toml
.github/workflows/: ci.yml  tier-1a.yml  tier-1b.yml
benches/: cbor_perf.rs
src/: constants.rs  decoder.rs  encoder.rs  lib.rs  ser.rs  tags.rs  value.rs
tests/: compare_serde_cbor.rs  compat_test.rs  profile_deserialization.rs  test_newtype_hashmap.rs  test_option_handling.rs
